fix: link: align two hover colors with the latest design spec (#719)

--- a/src/styles/themes/_default-theme.scss
+++ b/src/styles/themes/_default-theme.scss
@@ -362,9 +362,9 @@
   --anchor-secondary-active-color: var(--grey-color-90);
   --anchor-hover-color: var(--primary-color-90);
   --anchor-disruptive-hover-color: var(--disruptive-secondary-color);
-  --anchor-neutral-hover-color: var(--primary-secondary-color);
+  --anchor-neutral-hover-color: var(--grey-secondary-color);
   --anchor-primary-hover-color: var(--primary-secondary-color);
-  --anchor-secondary-hover-color: var(--primary-secondary-color);
+  --anchor-secondary-hover-color: var(--grey-color-90);
   --anchor-visited-color: var(--violet-secondary-color);
   --anchor-disruptive-visited-color: var(--violet-secondary-color);
   --anchor-neutral-visited-color: var(--violet-secondary-color);
